<resources>
    <string name="app_name">UmtylAcademy</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registration2">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="enter2">Вход</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Номер</string>
    <string name="cont">Продолжить</string>
    <string name="check_inbox">Проверьте почту</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="correct_email">Заполните правильно</string>
    <string name="have_acc">У меня уже есть аккаунт</string>
    <string name="error_complete">Заполните поле</string>
    <string name="error_user">Такого пользователя не существует</string>
    <string name="wait">Подождите...</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="check_internet">Проверьте Интернет соединения</string>
    <string name="text_forget_password">Укажите Email, после на почту придет сообщение об изменений пароля</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="course_page">Курс</string>
    <string name="test_page">Тест</string>
    <string name="game_page">Игра</string>
    <string name="music_page">Музыка</string>
    <string name="change_profile">Редактировать профиль</string>
    <string name="my_besties">Мои достижения</string>
    <string name="change_lang">Изменить язык</string>
    <string name="about">О нас</string>
    <string name="profile">Профиль</string>
    <string name="courses">Курсы</string>
    <string name="lang">RU/KZ</string>
    <string name="all_courses">Все курсы</string>
    <string name="our_lessons">Наши уроки</string>
    <string name="my_courses">Мои курсы</string>
    <string name="cart_items">Корзина</string>
    <string name="my_orders">Мои заказы</string>
    <string name="already_orders">Уже имеющиеся заказы</string>
    <string name="all_videos">Все видео:</string>
    <string name="price">Цена:</string>
    <string name="remind">Предупреждение</string>

    <string name="ask">Вы уверены?</string>
    <string name="logout">Выход</string>
    <string name="loading">Загрузка</string>
    <string name="pls_wait">Пожалуйста, подождите</string>

    <string name="algebra">Алгебра</string>
    <string name="attestat">Аттестация</string>
    <string name="belbin_test">Тест Белбина</string>
    <string name="biology">Биология</string>
    <string name="chemistry">Химия</string>
    <string name="eng_lang">Английский язык</string>
    <string name="geography">География</string>
    <string name="geography2">Естественные науки</string>
    <string name="geometry">Геометрия</string>
    <string name="inform">Информатика</string>
    <string name="kval_test">Квал тест</string>
    <string name="kz_history">История Казахстана</string>
    <string name="kz_lang">Казахский язык</string>
    <string name="kz_literature">Казахская литература</string>
    <string name="law">Право</string>
    <string name="logic_questions">Логические вопросы</string>
    <string name="management">Менеджмент</string>
    <string name="math">Математика</string>
    <string name="metodist_test">Методист тест</string>
    <string name="music">Музыка</string>
    <string name="oz_oz">Самопознание</string>
    <string name="physics">Физика</string>
    <string name="primary_class">Начальный класс</string>
    <string name="psychology">Психология</string>
    <string name="read_property">Грамотность чтения</string>
    <string name="ru_lang">Русский язык</string>
    <string name="technology">Технология</string>
    <string name="world_history">Всемирная история</string>

    <string name="question_size">Количество вопросов:</string>
    <string name="timer">Данное время:</string>
    <string name="questions">вопросов</string>
    <string name="start_test">Начать тест</string>
    <string name="history">История</string>
    <string name="finish">Завершить</string>
    <string name="question">Вопрос</string>
    <string name="answers">Ответы</string>
    <string name="next">Следующий</string>
    <string name="test_result">Результаты теста</string>
    <string name="lesson">Урок</string>
    <string name="back_to_main">Вернуться на главную страницу</string>
    <string name="search_music">Поиск музыки</string>

    <string name="last_updated">Последнее обновление:</string>
    <string name="course_lang">Язык курса:</string>
    <string name="buy_now">Купить сейчас</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="what_learn">Что вы изучите?</string>
    <string name="study_plan">План уроков</string>
    <string name="lessons_lower">уроков</string>
    <string name="empty_my_courses">У вас нет доступных курсов</string>

    <!--    <string name="buy_course">Чтобы купить курс «Подготовка к аттестации» заплатите 9900 тенге и отправьте мне чек в WhatsApp. Тогда мы вышлем вам доступ.</string>-->
    <string name="whats_link"><u>http://wa.me/+77076667585</u></string>
    <string name="whatsapp_num">WhatsApp: 8 707 666 75 85</string>
    <string name="kaspi_num">Kaspi номер: 8707666 7585</string>
    <string name="kaspi_num_16">Kaspi: 4400 5418 2346 23815</string>
    <string name="zapis">Записаться на занятия нажмите на ссылку:</string>
    <string name="answer_managers">(Вам ответят наши менеджеры)</string>
    <string name="error">Ошибка</string>
    <string name="first_part">Чтобы купить курс</string>
    <string name="second_part">заплатите 9900 тенге и отправьте мне чек в WhatsApp. Тогда мы вышлем вам доступ. </string>

    <string name="check_course">Проверьте курс на странице "Мои курсы"</string>
    <string name="added_to_cart">Добавлено в корзину</string>
    <string name="to_view_buy_course">Чтобы смотреть, купите курс</string>
    <string name="change_password">Изменить пароль</string>
    <string name="send_pass">Введите свой адрес электронной почты ниже, мы отправим вам электронное письмо со ссылкой на изменение пароля</string>
    <string name="send">Отправить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="sent">Отправлено, проверьте почту</string>
    <string name="empty">Этот тест еще не добавлен</string>
    <string name="changed">Изменено</string>
    <string name="haded">Этот курс уже имеется у вас</string>
    <string name="checkMistake">Работа над ошибками</string>
    <string name="your_chose">Ваш выбор</string>
    <string name="yourQuestSize">Количество вопросов на которые вы ответили:</string>
    <string name="emptyScore">Вы не ответили ни на один вопрос</string>
    <string name="about_us_1">Проект для современных учителей. Современная подготовка учителей, воспитателей, руководителей по психологии, менеджменту, маркетингу, программному обеспечению, мастерству.</string>
    <string name="about_us_2">Укрепление уровня знаний, проходя больше тестов на аттестацию, викторины, школьные программы, менеджмент.</string>
    <string name="about_us_3">Курсы для преподавателей. По мере развития учителей появляется возможность вовлечь учащихся в знания и полностью овладеть дидактическими методами.</string>
</resources>