<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="25dp"
        android:background="@drawable/bg_round">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/no"
                android:layout_weight="1"
                android:background="@color/white"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/yes"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:background="@drawable/main_button_background"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>