<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_grey"
            android:hint="@string/name"
            android:padding="5dp">

            <EditText
                android:id="@+id/etNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_main"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_grey"
            android:hint="@string/surname"
            android:padding="5dp">

            <EditText
                android:id="@+id/etSurnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_main"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_grey"
            android:hint="@string/email"
            android:padding="5dp">

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_main"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_grey"
            android:hint="@string/phone"
            android:padding="5dp">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/etPhoneRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:backgroundTint="@color/project_main"
                android:inputType="phone"
                app:mask="+7 (###) ### ## ##" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:text="@string/create_password" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_grey"
            android:hint="@string/password"
            android:padding="5dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/project_main">

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_main"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <Button
            android:id="@+id/btnRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_button_background"
            android:text="@string/registration"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>