<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/project_main"
                android:gravity="center"
                android:minHeight="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/backToCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vector_white" />
            </Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="21dp"
                android:text="@string/remind"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginStart="21dp"
                android:background="@drawable/main_button_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:background="@drawable/main_button_background"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="100dp"
                android:paddingVertical="28dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remind"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_pass_more_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/whatsapp_num"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/kaspi_num"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/kaspi_num_16"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/zapis"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/whatsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whats_link"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>